# Food-Recognition

./: model.ipynb  pyproject.toml  script.py
DataPreprocess/: scripts.py
